--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
          <h1> 𝗠𝗨𝗡𝗗𝗢 𝗗𝗢𝗦 𝗔𝗡𝗜𝗠𝗔𝗜𝗦 </h1>
-         <li><a href="m.html"> 𝗔𝗡𝗜𝗠𝗔𝗜𝗦 𝗘𝗫𝗧𝗜𝗡𝗧𝗢𝗦</a></li>
+         <li><a href="m.html"> 𝔸ℕ𝕀𝕄𝔸𝕀𝕊</a></li>
 </head>
     <body>
 
