--- a/m.html
+++ b/m.html
@@ -7,7 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-        <h1> 𝟭. 𝗧𝗮𝗿𝘁𝗮𝗿𝘂𝗴𝗮 𝗴𝗶𝗴𝗮𝗻𝘁𝗲 𝗱𝗲 𝗚𝗮𝗹𝗮́𝗽𝗮𝗴𝗼𝘀 (𝗖𝗵𝗲𝗹𝗼𝗻𝗼𝗶𝗱𝗶𝘀 𝗻𝗶𝗴𝗲𝗿) 𝗧𝗮𝗿𝘁𝗮𝗿𝘂𝗴𝗮 𝗴𝗶𝗴𝗮𝗻𝘁𝗲 𝗱𝗲 𝗴𝗮𝗹𝗮́𝗽𝗮𝗴𝗼𝘀 𝗔 𝘁𝗮𝗿𝘁𝗮𝗿𝘂𝗴𝗮 𝗴𝗶𝗴𝗮𝗻𝘁𝗲 𝗱𝗲 𝗚𝗮𝗹𝗮́𝗽𝗮𝗴𝗼𝘀 𝗳𝗼𝗶 𝗲𝘅𝘁𝗶𝗻𝘁𝗮 𝗱𝗮 𝗻𝗮𝘁𝘂𝗿𝗲𝘇𝗮 𝗵𝗮́ 𝗺𝗮𝗶𝘀 𝗱𝗲 𝟭𝟱𝟬 𝗮𝗻𝗼𝘀 𝗢 𝘂́𝗹𝘁𝗶𝗺𝗼 𝗲𝘅𝗲𝗺𝗽𝗹𝗮𝗿 𝗱𝗮 𝘁𝗮𝗿𝘁𝗮𝗿𝘂𝗴𝗮 𝗴𝗶𝗴𝗮𝗻𝘁𝗲 𝗱𝗲 𝗚𝗮𝗹𝗮́𝗽𝗮𝗴𝗼𝘀 𝗺𝗼𝗿𝗿𝗲𝘂 𝗻𝗼 𝗮𝗻𝗼 𝗱𝗲 𝟮𝟬𝟭𝟮, 𝗼𝗻𝗱𝗲 𝘃𝗶𝘃𝗶𝗮 𝗲𝗺 𝗰𝗮𝘁𝗶𝘃𝗲𝗶𝗿𝗼. 𝗡𝗮 𝗻𝗮𝘁𝘂𝗿𝗲𝘇𝗮, 𝗮 𝗲𝘀𝗽𝗲́𝗰𝗶𝗲 𝗷𝗮́ 𝗲𝗿𝗮 𝗰𝗼𝗻𝘀𝗶𝗱𝗲𝗿𝗮𝗱𝗮 𝗲𝘅𝘁𝗶𝗻𝘁𝗮 𝗵𝗮́ 𝗺𝗮𝗶𝘀 𝗱𝗲 𝟭𝟱𝟬 𝗮𝗻𝗼𝘀. 𝗢𝘀 𝗮𝗻𝗶𝗺𝗮𝗶𝘀 𝗱𝗲𝘀𝘁𝗮 𝗲𝘀𝗽𝗲́𝗰𝗶𝗲 𝘃𝗶𝘃𝗶𝗮𝗺 𝗽𝗼𝗿 𝗺𝗮𝗶𝘀 𝗱𝗲 𝟭𝟬𝟬 𝗮𝗻𝗼𝘀.
-             𝗔𝘁𝘂𝗮𝗹𝗺𝗲𝗻𝘁𝗲, 𝗽𝗲𝘀𝗾𝘂𝗶𝘀𝗮𝗱𝗼𝗿𝗲𝘀 𝗱𝗼 𝗺𝘂𝗻𝗱𝗼 𝘁𝗼𝗱𝗼 𝗿𝗲𝗮𝗹𝗶𝘇𝗮𝗺 𝗲𝘀𝘁𝘂𝗱𝗼𝘀 𝗽𝗮𝗿𝗮 𝗿𝗲𝗰𝘂𝗽𝗲𝗿𝗮𝗿 𝗮 𝗲𝘀𝗽𝗲́𝗰𝗶𝗲 𝗮 𝗽𝗮𝗿𝘁𝗶𝗿 𝗱𝗮 𝗲𝘅𝘁𝗿𝗮𝗰̧𝗮̃𝗼 𝗱𝗼 𝗗𝗡𝗔.</h1>
+        <h1>Os animais
+            Há muitos animais na natureza e todos são diferentes.
+            Os animais estão adaptados ao ambiente em que vivem,
+            pela forma do corpo, pela maneira como se deslocam, pela
+            alimentação e pelos lugares onde se abrigam.
+            Uns voam, outros nadam, correm, rastejam…
+            Os que vivem ao nosso lado são dóceis e carinhosos:
+            animais domésticos. Outros vivem escondidos nos montes e
+            nas florestas: animais selvagens.
+            Para sobreviverem todos precisam de se alimentar. Há
+            animais que comem outros animais, os carnívoros. Há animais
+            que só comem plantas, são herbívoros. Outros comem animais
+            e plantas, omnívoros. Os que se alimentam de insectívoros e os
+            que se alimentam de grãos são granívoros.
+            Alguns animais nascem de ovos, como o pardal, são
+            animais ovíparos. Outros nascem do ventre da mãe, como o
+            cavalo, chamam-se vivíparos.
+            Os animais que têm ossos e um esqueleto interno
+            (espinha ou coluna vertebral) chamam-se vertebrados. Os que
+            não têm ossos nem esqueletos são invertebrados, como o
+            caracol. </h1>
 </body>
 </html>
